care-australia-uat/force-app/main/default/objects/BamboraAPI__c/BamboraAPI__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Bambora API</label>
</CustomObject>