care-australia-uat/force-app/main/default/objects/BamboraAPI__c/fields/Batch_API__c.field-meta.xml
<CustomField>
    <fullName>Batch_API__c</fullName>
    <label>Batch API</label>
    <type>Url</type>
</CustomField>