care-australia-uat/force-app/main/default/objects/BamboraAPI__c/fields/Cash_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Cash_Account_Number__c</fullName>
    <label>Cash Account Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>