care-australia-uat/force-app/main/default/objects/BamboraAPI__c/fields/Cash_Password__c.field-meta.xml
<CustomField>
    <fullName>Cash_Password__c</fullName>
    <description>Password for Cash Payments</description>
    <label>Cash Password</label>
    <length>255</length>
    <type>Text</type>
</CustomField>