care-australia-uat/force-app/main/default/objects/BamboraAPI__c/fields/Cash_Username__c.field-meta.xml
<CustomField>
    <fullName>Cash_Username__c</fullName>
    <description>Username for Cash Payments</description>
    <label>Cash Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>