care-australia-uat/force-app/main/default/objects/BamboraAPI__c/fields/Customer_Storage_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_Storage_Number__c</fullName>
    <label>Customer Storage Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>