care-australia-uat/force-app/main/default/objects/BamboraAPI__c/fields/Merchant_ID__c.field-meta.xml
<CustomField>
    <fullName>Merchant_ID__c</fullName>
    <description>Custom Checkout Merchant ID/GUID</description>
    <label>Merchant ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>