care-australia-uat/force-app/main/default/objects/BamboraAPI__c/fields/Password__c.field-meta.xml
<CustomField>
    <fullName>Password__c</fullName>
    <description>Password for RG Payments</description>
    <label>RG Password</label>
    <length>255</length>
    <type>Text</type>
</CustomField>