care-australia-uat/force-app/main/default/objects/BamboraAPI__c/fields/Payment_API__c.field-meta.xml
<CustomField>
    <fullName>Payment_API__c</fullName>
    <label>Payment API</label>
    <type>Url</type>
</CustomField>