care-australia-uat/force-app/main/default/objects/BamboraAPI__c/fields/RG_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>RG_Account_Number__c</fullName>
    <label>RG Account Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>