care-australia-uat/force-app/main/default/objects/BamboraAPI__c/fields/TokeniseCC_API__c.field-meta.xml
<CustomField>
    <fullName>TokeniseCC_API__c</fullName>
    <label>TokeniseCC API</label>
    <type>Url</type>
</CustomField>