care-australia-uat/force-app/main/default/objects/BamboraAPI__c/fields/Username__c.field-meta.xml
<CustomField>
    <fullName>Username__c</fullName>
    <description>Username for RG Payments</description>
    <label>RG Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>